fix: Scroll when overflow!

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@
 }
 
 .post-content {
+    overflow-x: scroll;
     font-size: 1rem;
     user-select: text;
     color: var(--text-normal);
@@ -111,7 +112,7 @@
     border-block-start: 1px solid var(--background-modifier-border-hover);
 }
 
-@container (width < 300px) {
+@container (width < 400px) {
     .post-actions {
         flex-direction: column;
         align-items: stretch;
